--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     },
     "require": {
         "php": ">=8.3",
-        "ext-mysqli": "*"
+        "ext-mysqli": "*",
+        "sebastian/csv-parser": "^1.0"
     },
     "config": {
         "platform": {
