--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     },
     "autoload": {
         "classmap": [
-            "src/"
+            "src/",
+            "tests/src/"
         ]
     },
     "extra": {
