Fix autoload configuration for testing

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,11 @@
     },
     "autoload": {
         "classmap": [
-            "src/",
+            "src/"
+        ]
+    },
+    "autoload-dev": {
+        "classmap": [
             "tests/src/"
         ]
     },
