--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
 name: "CI"
 
 env:
-  COMPOSER_ROOT_VERSION: "1.0-dev"
+  COMPOSER_ROOT_VERSION: "2.0.x-dev"
 
 permissions:
   contents: read
@@ -64,7 +64,6 @@ jobs:
       fail-fast: false
       matrix:
         php-version:
-          - "8.3"
           - "8.4"
           - "8.5"
 
