--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,13 @@
 # https://help.github.com/en/categories/automating-your-workflow-with-github-actions
 
 on:
-  - "pull_request"
-  - "push"
+  - pull_request
+  - push
 
-name: "CI"
+name: CI
 
 env:
-  COMPOSER_ROOT_VERSION: "2.0.x-dev"
+  COMPOSER_ROOT_VERSION: 2.0.x-dev
 
 permissions:
   contents: read
@@ -64,32 +64,32 @@ jobs:
       fail-fast: false
       matrix:
         php-version:
-          - "8.4"
-          - "8.5"
+          - 8.4
+          - 8.5
 
     steps:
       - name: Checkout
-        uses: "actions/checkout@v4"
+        uses: actions/checkout@v4
 
       - name: Install MySQL
         uses: shogo82148/actions-setup-mysql@v1
         with:
-          mysql-version: "9.0"
+          mysql-version: 9.0
 
       - name: Set up test database
         run: mysql -u root < ./tests/fixture/schema.sql
 
       - name: Install PHP with extensions
-        uses: "shivammathur/setup-php@v2"
+        uses: shivammathur/setup-php@v2
         with:
-          php-version: "${{ matrix.php-version }}"
-          coverage: "xdebug"
+          php-version: ${{ matrix.php-version }}
+          coverage: xdebug
 
       - name: Install dependencies with Composer
-        run: "./tools/composer update --no-ansi --no-interaction --no-progress"
+        run: ./tools/composer update --no-ansi --no-interaction --no-progress
 
       - name: Run tests with PHPUnit
-        run: "./tools/phpunit --log-junit junit.xml --coverage-clover=coverage.xml"
+        run: ./tools/phpunit --log-junit junit.xml --coverage-clover=coverage.xml
 
       - name: Upload test results to Codecov.io
         if: ${{ !cancelled() }}
