--- a/infection.json5
+++ b/infection.json5
@@ -1,17 +1,21 @@
 {
-    "$schema": "https://raw.githubusercontent.com/infection/infection/0.29.6/resources/schema.json",
-    "source": {
-        "directories": [
-            "src"
-        ]
-    },
+    "$schema": "https://raw.githubusercontent.com/infection/infection/0.31.2/resources/schema.json",
     "phpUnit": {
         "customPath": "./tools/phpunit"
     },
+    "staticAnalysisTool": "phpstan",
+    "phpStan": {
+      "customPath": "tools/phpstan"
+    },
+    "threads": "max",
+  "source": {
+    "directories": [
+      "src"
+    ]
+  },
     "mutators": {
         "@default": true
     },
-    "ignoreMsiWithNoMutations": true,
     "minMsi": 100,
     "minCoveredMsi": 100
 }
